--- a/index-iphone.html
+++ b/index-iphone.html
@@ -3,20 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <title>Kalkulačka jídel – iPhone</title>
+  <title>Kalkulačka jídel – iPhone (kompakt)</title>
   <style>
-    body { margin:0; font-family: -apple-system, BlinkMacSystemFont, Roboto, Arial; background:#0f172a; color:#e5e7eb; }
-    .container { padding: 10px; }
-    .grid { display:grid; gap:14px; grid-template-columns: repeat(2, 1fr); }
-    button.item {
-      padding: 20px; border-radius: 18px; background:linear-gradient(180deg,#1e293b,#0f172a);
-      border:1px solid #334155; font-size:18px; font-weight:600; color:#e5e7eb;
+    :root {
+      --bg:#0f172a; --text:#e5e7eb; --muted:#94a3b8; --ring:#334155;
     }
-    button.item:active { transform:scale(.97); }
-    .price { margin-top:6px; font-size:16px; color:#94a3b8; }
-    .footer { position:sticky; bottom:0; background:#0b1220; padding:14px; display:flex; justify-content:space-between; }
-    .value { font-size:22px; font-weight:700; }
-    .btn { padding:10px 14px; background:#1e293b; border:1px solid #334155; border-radius:12px; color:#e5e7eb; }
+    body { margin:0; font-family:-apple-system, BlinkMacSystemFont, Roboto, Arial; background:#0f172a; color:var(--text); }
+    .container { padding:8px; }
+    .grid { display:grid; gap:10px; grid-template-columns:repeat(2, 1fr); }
+    button.item {
+      padding:14px; border-radius:14px; background:linear-gradient(180deg,#1e293b,#0f172a);
+      border:1px solid var(--ring); color:var(--text);
+      font-size:16px; font-weight:700; text-align:left;
+    }
+    button.item:active{ transform:scale(.98); }
+    .price{ margin-top:4px; font-size:13px; color:var(--muted); font-weight:600; }
+    h3{ margin:12px 4px 6px; font-size:14px; color:var(--muted); text-transform:uppercase; letter-spacing:.06em; }
+    .footer{ position:sticky; bottom:0; background:#0b1220; padding:10px 12px; display:flex; justify-content:space-between; align-items:center; border-top:1px solid var(--ring); }
+    .value{ font-size:18px; font-weight:800; }
+    .btn{ padding:8px 12px; border-radius:12px; border:1px solid var(--ring); background:#1e293b; color:var(--text); font-weight:700; }
   </style>
 </head>
 <body>
@@ -33,17 +38,17 @@
 const MENU = {
   soups: [
     { name: "Gulášová", price: 50 },
-    { name: "Hovězí vývar", price: 30 }
+    { name: "Vývar", price: 30 }
   ],
   mains: [
     { name: "Vepřový řízek", price: 150 },
     { name: "Kuřecí řízek", price: 150 },
-    { name: "Svíčková na smetaně", price: 180 },
+    { name: "Svíčková", price: 180 },
     { name: "Španělský ptáček", price: 190 },
     { name: "Moravský vrabec", price: 160 },
     { name: "Plněný knedlík", price: 150 },
     { name: "Bramborák", price: 50 },
-    { name: "Dukátové buchtičky", price: 90 }
+    { name: "Buchtičky", price: 90 }
   ],
   boxes: [
     { name: "🍜 Box polévka", price: 5 },
@@ -52,7 +57,8 @@ const MENU = {
 };
 const fmt = new Intl.NumberFormat('cs-CZ',{style:'currency',currency:'CZK',maximumFractionDigits:0});
 let total=0;
-function render(){['soups','mains','boxes'].forEach(sec=>{const el=document.getElementById(sec);el.innerHTML='';MENU[sec].forEach(i=>{const b=document.createElement('button');b.className='item';b.innerHTML=`<div>${i.name}</div><div class='price'>${fmt.format(i.price)}</div>`;b.onclick=()=>{total+=i.price;document.getElementById('total').textContent=fmt.format(total);};el.appendChild(b);});});}
+function button(i){const b=document.createElement('button');b.className='item';b.innerHTML=`<div>${i.name}</div><div class='price'>${fmt.format(i.price)}</div>`;b.onclick=()=>{total+=i.price;document.getElementById('total').textContent=fmt.format(total);};return b;}
+function render(){['soups','mains','boxes'].forEach(sec=>{const el=document.getElementById(sec);el.innerHTML='';MENU[sec].forEach(i=>el.appendChild(button(i)));});}
 document.getElementById('clearBtn').onclick=()=>{total=0;document.getElementById('total').textContent=fmt.format(total);};
 render();
 </script>
