--- a/index-iphone.html
+++ b/index-iphone.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <title>Kalkulačka jídel – iPhone (kompakt)</title>
+  <title>Kalkulačka jídel – iPhone (mezery)</title>
   <style>
     :root {
       --bg:#0f172a; --text:#e5e7eb; --muted:#94a3b8; --ring:#334155;
     }
     body { margin:0; font-family:-apple-system, BlinkMacSystemFont, Roboto, Arial; background:#0f172a; color:var(--text); }
-    .container { padding:8px; }
-    .grid { display:grid; gap:10px; grid-template-columns:repeat(2, 1fr); }
+    .container { padding:10px; }
+    .grid { display:grid; gap:16px; grid-template-columns:repeat(2, 1fr); }
     button.item {
       padding:14px; border-radius:14px; background:linear-gradient(180deg,#1e293b,#0f172a);
       border:1px solid var(--ring); color:var(--text);
