--- a/index-iphone.html
+++ b/index-iphone.html
@@ -2,15 +2,22 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <title>Kalkulačka jídel – iPhone (mezery)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
+  <title>Kalkulačka jídel – iPhone (fix footer)</title>
   <style>
-    :root {
-      --bg:#0f172a; --text:#e5e7eb; --muted:#94a3b8; --ring:#334155;
+    :root { --bg:#0f172a; --text:#e5e7eb; --muted:#94a3b8; --ring:#334155; }
+    html, body { height:100%; }
+    body {
+      margin:0; font-family:-apple-system, BlinkMacSystemFont, Roboto, Arial;
+      background:#0f172a; color:var(--text);
+      display:flex; flex-direction:column; min-height:100vh; overflow:hidden;
     }
-    body { margin:0; font-family:-apple-system, BlinkMacSystemFont, Roboto, Arial; background:#0f172a; color:var(--text); }
-    .container { padding:10px; }
+    .container {
+      flex:1; padding:10px; display:block; box-sizing:border-box;
+      max-width: 1000px; margin: 0 auto; width: 100%;
+    }
     .grid { display:grid; gap:16px; grid-template-columns:repeat(2, 1fr); }
+    h3{ margin:10px 4px 6px; font-size:14px; color:var(--muted); text-transform:uppercase; letter-spacing:.06em; }
     button.item {
       padding:14px; border-radius:14px; background:linear-gradient(180deg,#1e293b,#0f172a);
       border:1px solid var(--ring); color:var(--text);
@@ -18,8 +25,12 @@
     }
     button.item:active{ transform:scale(.98); }
     .price{ margin-top:4px; font-size:13px; color:var(--muted); font-weight:600; }
-    h3{ margin:12px 4px 6px; font-size:14px; color:var(--muted); text-transform:uppercase; letter-spacing:.06em; }
-    .footer{ position:sticky; bottom:0; background:#0b1220; padding:10px 12px; display:flex; justify-content:space-between; align-items:center; border-top:1px solid var(--ring); }
+    .footer{
+      flex:none; background:#0b1220; padding:10px 12px;
+      padding-bottom: calc(10px + env(safe-area-inset-bottom));
+      display:flex; justify-content:space-between; align-items:center;
+      border-top:1px solid var(--ring);
+    }
     .value{ font-size:18px; font-weight:800; }
     .btn{ padding:8px 12px; border-radius:12px; border:1px solid var(--ring); background:#1e293b; color:var(--text); font-weight:700; }
   </style>
